# pathfilter

./: Cargo.toml
.github/workflows/: rust-build-test.yml
src/: extension.rs  lib.rs  regex.rs
