[package]
name = "pathfilter"
version = "0.4.0"
edition = "2021"
authors = ["Nils Feierabend <mztikk@outlook.de>"]
repository = "https://github.com/mztikk/pathfilter"
license = "MIT"
description = "library to filter paths"

[features]
regex = ["dep:regex"]
serde = ["dep:serde", "dep:serde_regex"]

[dependencies]
regex = { version = "1.8.4", optional = true }
serde = { version = "1.0.164", features = ["derive"], optional = true }
serde_regex = { version = "1.1.0", optional = true }
